appointment page and serach using specialization

--- a/src/main/resources/templates/fragments/commonui.html
+++ b/src/main/resources/templates/fragments/commonui.html
@@ -57,8 +57,9 @@
           Appointment
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" th:href="@{/app/register}">Register</a>
-          <a class="dropdown-item" th:href="@{/app/all}">All</a>
+          <a class="dropdown-item" th:href="@{/app/register}">Add</a>
+          <a class="dropdown-item" th:href="@{/app/all}">View All</a>
+           <a class="dropdown-item" th:href="@{/app/view}">Book</a>
         </div>
       </li>
       
